--- a/views/posts/details.hbs
+++ b/views/posts/details.hbs
@@ -1,6 +1,5 @@
 <div class="details">
-  <a href="/cycle-routes">Go back</a><br />
-  <img src="{{post.image}}" /><br />
+  <img src="{{post.imageUrl}}" alt='{{post.title}}'/><br />
   <h2>{{post.title}}</h2>
   <hr />
   <p>by {{author.username}}</p>
@@ -9,4 +8,5 @@
   <p>Route Length: {{post.routeLength}}</p>
   <hr />
 </div>
-<a href="/users/{{author._id}}/posts">See all {{author.username}}'s posts </a>
+<a href="/list">Go back</a><br />
+{{!-- <a href="/users/{{author._id}}/posts">See all {{author.username}}'s posts </a> --}}
