--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -2,7 +2,7 @@
   <h2>Welcome, {{ userInSession.username }}!</h2>
   <p>This is your profile page my friend!</p>
        <nav>
-        <a href="/post-create">Create a new post</a>
+        <a href="/create">Create a new post</a>
       </nav>
   <button>
     <a href="/userProfile">Reload the page</a>
