--- a/views/posts/list.hbs
+++ b/views/posts/list.hbs
@@ -1,11 +1,11 @@
 <h1>Cycle Routes</h1>
-<h3>Click on the cycle route to check the detail!</h3>
+<h3>Click on the cycle route to check the details</h3>
 <section class="posts">
 {{#each posts}}
 <div class="postsInfo">
-<img src="{{this.image}}"/><br>
+<img src="{{imageUrl}}" alt='{{post.title}}'/><br>
 <h3>{{this.title}}</h3>
-<a href="/cycle-routes/{{this._id}}">See more</a>
+<a href="/posts/{{_id}}/details">See more</a>
 </div>
 {{/each}}
 </section>
