--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,5 @@
 <h1>Welcome !</h1>
 <nav class="nav-bar">
-  <a href="/cycle-routes">Cycle Routes List</a><br>
-  <a href="/cycle-routes/create">Add a New Cycle Route</a><br>
-  <a href="/movies/create">Add a New Movie</a>
+  <a href="/posts">Cycle Routes List</a><br>
+  <a href="/create">Add a New Cycle Route</a><br>
 </nav>
