--- a/views/posts/create.hbs
+++ b/views/posts/create.hbs
@@ -1,6 +1,6 @@
 <h2>Create a new post</h2>
 
-<form action="/create" method="POST" enctype="multipart/form-data">
+<form action="/posts/create" method="POST" enctype="multipart/form-data">
   <label>
     Title:
     <input type="text" name="title" required/>
