--- a/views/posts/create.hbs
+++ b/views/posts/create.hbs
@@ -31,9 +31,9 @@
   </label>
   <br />
   <button type="submit"> Create </button>
-  <label>
+  {{!-- <label>
   {{#if errorMessage}} 
   {{errorMessage}}
   {{/if}}
-  </label>
+  </label> --}}
 </form>
