--- a/views/posts/details.hbs
+++ b/views/posts/details.hbs
@@ -8,5 +8,5 @@
   <p>Route Length: {{post.routeLength}}</p>
   <hr />
 </div>
-<a href="/list">Go back</a><br />
+<a href="/">Go back</a><br />
 {{!-- <a href="/users/{{author._id}}/posts">See all {{author.username}}'s posts </a> --}}
