--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -1,8 +1,8 @@
-{{#if userInSession}}
-  <h2>Welcome, {{ userInSession.username }}!</h2>
+{{#if user}}
+  <h2>Welcome, {{ user.username }}!</h2>
   <p>This is your profile page my friend!</p>
        <nav>
-        <a href="/create">Create a new post</a>
+        <a href="/posts/create">Create a new post</a>
       </nav>
   <button>
     <a href="/userProfile">Reload the page</a>
