--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bikepacker</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Bikepacker</title>
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+</head>
 
-  <body>
+<body>
 
-    <nav>
-      <ul>
-        <li id="to-left">
-          <p><a href="/"> Bikepacker </a></p> <span></span>
-        </li>
-        <li id="to-right">
-          <a href="/signup">Signup</a>
-          <span> | </span>
-          <a href="/login">Login</a>
-          <span> | </span>
-          <form id="logout-form" action="/logout" method="POST">
-            <button>Logout</button>
-          </form>
+  <nav>
+    <ul>
+      <li id="to-left">
+        <p><a href="/"> Bikepacker </a></p> <span></span>
+      </li>
 
-          <a href="/userProfile">Profile</a>
+      <li id="to-right">
+        {{#if userData}}
+        <a href="/userProfile">Profile</a>
+        <span> | </span>
+        <a href='/'>Home</a>
+        <form id="logout-form" action="/logout" method="POST">
+          <button>Logout</button>
+        </form>
+      </li>
+      {{else}}
+      <li id='signup-in'>
+        <a href="/signup">Signup</a>
+        <span> | </span>
+        <a href="/login">Login</a>
+        <span> | </span>
+        <a href='/'>Home</a>
+      </li>
+      {{/if}}
+    </ul>
+  </nav>
 
-        </li>
-      </ul>
-    </nav>
+  {{{body}}}
 
-    {{{body}}}
-
-    <script src="/js/script.js"></script>
-  </body>
+  <script src="/js/script.js"></script>
+</body>
 
 </html>
