--- a/views/posts/details.hbs
+++ b/views/posts/details.hbs
@@ -2,11 +2,18 @@
   <img src="{{post.imageUrl}}" alt='{{post.title}}'/><br />
   <h2>{{post.title}}</h2>
   <hr />
-  <p>by {{author.username}}</p>
-  <p>City: {{post.city}}</p>
+  <p><strong>Author:</strong> {{post.author.username}}</p>
+  <p><strong>City:</strong> {{post.city}}</p>
+  <p><strong>Route Length:</strong> {{post.routeLength}}</p>
   <p>{{post.content}}</p>
-  <p>Route Length: {{post.routeLength}}</p>
   <hr />
 </div>
-<a href="/">Go back</a><br />
+{{#equal post.author.username userData.username}}
+<a href='/posts/{{post.id}}/edit'>Edit</a><br>
+<form id='delete-form' action="/posts/{{post.id}}/delete" method="POST">
+  <button id="delete-btn">Delete</button>
+</form>
+{{/equal}}
+<a href="/posts">Go back to the list</a>
+
 {{!-- <a href="/users/{{author._id}}/posts">See all {{author.username}}'s posts </a> --}}
