--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
+<div id='index'>
 <h1>Welcome !</h1>
 <nav class="nav-bar">
-  <a href="/posts">Cycle Routes List</a><br>
+  <a href="/posts">Check all the Cycle Routes</a><br>
 </nav>
+</div>
