--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Bikepacker</title>
+  <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico'>
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
@@ -14,6 +15,7 @@
   <nav>
     <ul>
       <li id="to-left">
+       <img src='/images/icon1.png' alt='bike icon'/>
         <p><a href="/"> Bikepacker </a></p> <span></span>
       </li>
 
